Opened 16 years ago

Closed 16 years ago

#2447 closed bug (fixed)

BListView::SwapItems behavior appears broken for BOutlineListView

Reported by: anevilyak Owned by: anevilyak
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If the move network up/down option is used in Vision, it sometimes winds up jumbling the list of items completely, eating items, etc., and often crashes on exit while clearing said item list. This implies something is wrong with the implementation of SwapItems().

Change History (1)

comment:1 by anevilyak, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev26149.

Note: See TracTickets for help on using tickets.