Rewrote SwapItems() so as to not fail in various cases. Fixed logic error in CountItemsUnder() that would sometimes return the wrong count. This would result in issues such as Vision's network reordering failing to reorder down due to retrieving the wrong item based on the count.

This fixes ticket #2447.
 


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26149 a95241bf-73f2-0310-859d-f6bbb57e9c96